[WebGPU] CTS validation/render_pipeline/shader_module.html is failing https://bugs.webkit.org/show_bug.cgi?id=266739 <radar://119958283>

Reviewed by Tadeu Zagallo.

ShaderModule was just missing device mismatch to pass and correction
for vertex-only pipelines.

* LayoutTests/http/tests/webgpu/webgpu/api/validation/render_pipeline/shader_module-expected.txt:
Add passing expectations.

* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::Device::createRenderPipeline):

Canonical link: https://commits.webkit.org/272612@main